# Aptabase

./: .gitignore  Cargo.toml
.shuttle/: config.toml
src/: main.rs
src/admin/: view.rs
src/static/: database.js  index.html  search.js
