[package]
name = "peptabase"
version = "0.1.0"
edition = "2021"

include = ["src/static/**/*"]

[dependencies]
actix-web = "4.5.1"
shuttle-actix-web = "0.50.0"
shuttle-runtime = "0.50.0"
serde = "1.0.197"
shuttle-shared-db = { version = "0.50.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.3"
serde_json = "1.0.114"
serde_derive = "1.0.197"
actix-cors = "0.7.0"
actix-files = "0.6.5"
bcrypt = "0.16.0"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
include_dir = "0.7.4"
